Clean up git ignore.
... stole it from a work project and forgot
to clean it up.

--- a/.gitignore
+++ b/.gitignore
@@ -23,17 +23,5 @@
 # Used to track versions in distributions
 RELEASE-VERSION
 
-# Sphinx related
-docs/_build/
-
-#Flycheck crap
-*flycheck*
-
-# nose --with-id tracking file
-.noseids
-
-# local settings
-nols_website/nols_cms/settings/local.py
-/node_modules
-/build
-/client/static_scss/_static_url.scss
+# Pytest
+.pytest_cache
