--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ requests>=2.21.0
 beautifulsoup4>=4.7.0
 
 # dev
-pytest==4.1.1
-pre-commit==1.14.4
+pre-commit
+pytest>=5.3.4  # https://github.com/pytest-dev/pytest/issues/5903
