--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,23 +6,12 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.7, 3.8]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run pre-commit hooks
-      run: |
-        pre-commit run --all-files
-    - name: Test with pytest
-      run: |
-        pytest
+        python-version: '3.7'
+    - name: Display Python version
+      run: python -c "import sys; print(sys.version)"       
