--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,12 @@ jobs:
       with:
         python-version: '3.7'
     - name: Display Python version
-      run: python -c "import sys; print(sys.version)"       
+      run: python -c "import sys; print(sys.version)"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip freeze
+    - name: Test with pytest
+      run: pytest
+      
