--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,10 @@
+exclude: ".mypy_cache"
 repos:
 -   repo: https://github.com/ambv/black
     rev: stable
     hooks:
     - id: black
-      language_version: python3.7
+      language_version: python3.8
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.1.0
     hooks:
@@ -20,3 +21,7 @@ repos:
           - --wrap-summaries=72
           - --wrap-descriptions=80
           - --in-place
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v0.761'
+    hooks:
+    -   id: mypy
