--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,12 @@
 exclude: ".mypy_cache"
 repos:
 -   repo: https://github.com/ambv/black
-    rev: stable
+    rev: 21.7b0
     hooks:
     - id: black
       language_version: python3.8
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
+    rev: v4.0.1
     hooks:
     -   id: check-ast
     -   id: end-of-file-fixer
@@ -14,7 +14,7 @@ repos:
     -   id: debug-statements
     -   id: check-merge-conflict
 -   repo: https://github.com/myint/docformatter
-    rev: master
+    rev: v1.4
     hooks:
     -   id: docformatter
         args:
@@ -22,6 +22,6 @@ repos:
           - --wrap-descriptions=80
           - --in-place
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v0.761'
+    rev: 'v0.910'
     hooks:
     -   id: mypy
