--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Test with pytest
       run: |
         pytest tests
-        # mypy datastructures.py kenpom.py --ignore-missing-imports
+        mypy datastructures.py kenpom.py --ignore-missing-imports --install-types --non-interactive
