--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,11 @@ repos:
           - --wrap-summaries=72
           - --wrap-descriptions=80
           - --in-place
-#-   repo: https://github.com/pre-commit/mirrors-mypy
-#   rev: 'v0.910'
-#   hooks:
-#   -   id: mypy
+-  repo: https://github.com/pre-commit/mirrors-mypy
+   rev: 'v0.910'
+   hooks:
+   -   id: mypy
+       args:
+         - --ignore-missing-imports
+         - --install-types
+         - --non-interactive
