--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Test with pytest
+    - name: Tests and type checker
       run: |
         pytest tests
         mypy datastructures.py kenpom.py --ignore-missing-imports --install-types --non-interactive
