--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,10 @@
 exclude: ".mypy_cache"
 repos:
 -   repo: https://github.com/ambv/black
-    rev: 21.7b0
+    rev: 22.12.0
     hooks:
     - id: black
-      language_version: python3.8
+      language_version: python3.9
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
     hooks:
