--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,12 @@
 exclude: ".mypy_cache"
 repos:
--   repo: https://github.com/ambv/black
-    rev: 22.12.0
+-   repo: https://github.com/grantjenks/blue
+    rev: v0.9.1
     hooks:
-    - id: black
+    - id: blue
       language_version: python3.9
+      args:
+        - -l99
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
     hooks:
